<resources>
    <string name="app_name">Mad Level 1 Task 1</string>
    <string name="explaining_text"><b>Guess if the next throw is going to be lower, equal or higher.</b></string>
    <string name="last_throw">Last throw: %d</string>
    <string name="higher">Higher</string>
    <string name="equals">Equals</string>
    <string name="lower">Lower</string>
    <string name="dice">Dice</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
</resources>